<resources>
    <string name="app_name">Ancop Guu</string>
    <string name="splashscreen_ancop">ANCOP</string>
    <string name="splash_screen_content_description">Splash screen</string>
    <string name="get_started">Get Started</string>
    <string name="this_app_is_decided_to_the_ancop_family_gregory_university">Decided to the ANCOP family, Gregory university Uturu. This app helps to keep you posted on what\'s going on in ANCOP guu. </string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="ancop_logo_content_description">ANCOP logo</string>
    <string name="full_name">Full name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="lorem_ipsum_is_simply_dummy_text_of_the_printing_and_typesetting_industry">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum is simply dummy text of the printing and typesetting industry.</string>
    <string name="admin">Admin</string>
    <string name="have_an_account">Have an Account?</string>
    <string name="no_account_yet">No account yet?</string>
    <string name="create_one">Create one</string>
    <string name="user_design_image">User_design_image</string>
    <string name="please_wait">Please wait</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="sign_out">Sign out</string>
    <string name="home">Home</string>
    <string name="hymns">Hymns</string>
    <string name="leaders">Leaders</string>
    <string name="library">Library</string>
    <string name="reverend">Reverend</string>
    <string name="reverend_bio">Biography</string>
    <string name="profile_image">Profile Image</string>
    <string name="username">Username</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="church_position">Church Position</string>
    <string name="add_new_profile_picture">Add new profile picture</string>
    <string name="save">Save</string>
    <string name="double_back_text">Press back again</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="refresh">Refresh</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="about">About</string>
    <string name="chapeline_details">Ven. Dr. Ugochukwu Okafor was born into the family of Late Engr Emeka Okafor. He studied Mechanical Engineering at the Institute of Management and Technology Enugu, before he joined the pastoral ministry.
Under the Episcopacy of Rt. Rev. Samuel Chibueze Amamchukwu Chukuka, the retired Bishop of Isuikwuato-Umunneochi, heattended the prestigious Trinity Theological College, Umuahia where he graduated with Diploma in Theology.
He was made deacon in 2009 and subsequently priested in 2010. He was preferred Canon by the Retired Bishop of Isuikwuato-Umunneochi (Rt. Rev. Samuel C. A. Chukuka) in 2012. He was in December 2020 preferred Archdeacon by the Rt. Rev. Manasses C. I. Okere (JP) (2nd Bishop of Isuikwuato-Umunneochi). Ven. Dr. Ugochukwu Okafor has been the Bishop’s Secretary and Bishop’s Chaplain since August 2009 till date. In 2020, the Bishop Rt. Rev. Manasses C. I. Okere (JP) made him his Administrative Secretary.
He bagged his Master of Missions Degree in 2016 and also in 2020, achieved his Doctor of Ministry Degree at Crowther Graduate Theological Seminary Abeokuta affiliated to Ekiti State University,
Ven. Dr. Ugochukwu Okafor has attended several conferences and seminars wherein he delivered appropriately. He has also held several positions in the Church of God.
He is an expositor of God’s word, a Bible Scholar, a Christian and presently the priest in charge of Chapel of Peace, Gregory University, Uturu, Diocese of Isuikwuato-Umunneochi. He is married to His heartthrob, Mrs. Chinwe Ugo Okafor with three lovely children. Chimdiegwu, Divine and David.
</string>
    <string name="chapeline_name">Ven. Dr. Ugochukwu Okafor</string>
    <string name="call_chapeline_floating_button">Call chapeline floating button</string>
    <string name="message_chapeline_floating_button">Message chapeline floating button</string>
</resources>