<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home_menu_id"
        android:icon="@drawable/ic_baseline_event_24"
        android:title="@string/home" />

    <item
        android:id="@+id/Hymns"
        android:icon="@drawable/ic_baseline_menu_book_24"
        android:title="@string/hymns" />

    <item
        android:id="@+id/leaders"
        android:icon="@drawable/ic_baseline_group_24"
        android:title="@string/leaders" />

    <item
        android:id="@+id/library"
        android:icon="@drawable/ic_baseline_library_books_24"
        android:title="@string/library" />

    <item
        android:id="@+id/reverend_bio"
        android:icon="@drawable/ic_baseline_account_circle_24_light"
        android:title="@string/reverend" />

</menu>