<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.UserProfileActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/iv_profile_image_id"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/dimen_20"
                    tools:src="@drawable/profile_place_holder" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/add_new_profile_image_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|bottom"
                    android:layout_marginStart="45dp"
                    android:layout_marginBottom="17dp"
                    android:contentDescription="@string/add_new_profile_picture"
                    app:srcCompat="@drawable/ic_baseline_add_photo_alternate_24" />

            </FrameLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/full_name_profile_id"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_35"
                android:layout_marginTop="@dimen/dimen_20"
                android:layout_marginEnd="@dimen/dimen_35"
                android:hint="@string/username"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_toolbar_profile_image_id"
                app:startIconDrawable="@drawable/ic_baseline_account_circle_24_light">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/text_field_username_profile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapWords" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_profile_id"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_35"
                android:layout_marginTop="@dimen/dimen_30"
                android:layout_marginEnd="@dimen/dimen_35"
                android:hint="@string/email"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/full_name_profile_id"
                app:startIconDrawable="@drawable/ic_baseline_email_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/text_field_email_profile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/mobile_number_profile_id"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_35"
                android:layout_marginTop="@dimen/dimen_30"
                android:layout_marginEnd="@dimen/dimen_35"
                android:hint="@string/mobile_number"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/email_profile_id"
                app:startIconDrawable="@drawable/ic_baseline_call_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/text_field_mobile_number_profile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/church_position_profile_id"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_35"
                android:layout_marginTop="@dimen/dimen_30"
                android:layout_marginEnd="@dimen/dimen_35"
                android:hint="@string/church_position"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/mobile_number_profile_id"
                app:startIconDrawable="@drawable/ic_baseline_group_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/text_field_church_position_profile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapWords" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/save_updated_profile_details_btn"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_60"
                android:layout_marginStart="@dimen/dimen_30"
                android:layout_marginTop="140dp"
                android:layout_marginEnd="@dimen/dimen_30"
                android:layout_marginBottom="@dimen/dimen_10"
                android:text="@string/save"
                app:cornerRadius="10dp"
                app:layout_constraintBottom_toBottomOf="parent" />
        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>