<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/dimen_56"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/dimen_25"
                android:layout_marginTop="@dimen/dimen_15"
                android:layout_marginEnd="@dimen/dimen_25"
                android:layout_marginBottom="@dimen/dimen_10"
                android:elevation="@dimen/dimen_10"
                android:padding="@dimen/dimen_5"
                app:cardCornerRadius="@dimen/dimen_5">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/iv_chapeline_bio_image"
                        android:layout_width="@dimen/dimen_100"
                        android:layout_height="@dimen/dimen_100"
                        android:layout_gravity="center"
                        android:layout_margin="@dimen/dimen_10"
                        android:src="@drawable/chapeline_img2" />

                    <TextView
                        android:id="@+id/text_view_chapeline_name_id"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="@dimen/dimen_5"
                        android:fontFamily="@font/alice"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="@dimen/dimen_18_sp"
                        android:textStyle="bold"
                        tools:text="@string/chapeline_name" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/chapeline_bio_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_15"
                android:layout_marginTop="@dimen/dimen_15"
                android:layout_marginEnd="@dimen/dimen_15"
                android:layout_marginBottom="@dimen/dimen_10"
                android:fontFamily="@font/alice"
                android:lineSpacingExtra="@dimen/dimen_5"
                android:textAlignment="center"
                android:textSize="@dimen/dimen_17_sp"
                android:textStyle="normal"
                tools:text="@string/chapeline_details" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/floating_button_message_chapeline_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|end"
                    android:layout_margin="15dp"
                    android:contentDescription="@string/call_chapeline_floating_button"
                    app:srcCompat="@drawable/ic_baseline_message_24" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/floating_button_call_chapeline_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center"
                    android:layout_margin="15dp"
                    android:contentDescription="@string/message_chapeline_floating_button"
                    app:srcCompat="@drawable/ic_baseline_call_24_white" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>